--- a/index.html
+++ b/index.html
@@ -7,16 +7,18 @@
 </head>
 
 <body>
-    <div id="anno4img-container" style="width:800px; height: 600px;">
+<div class="container" style="width: 90%; margin: 0 auto; border: 1px solid #ccc;">
+    <div id="anno4img-container" style="width:800px; height: 600px; border: 1px solid #ccc; margin:0 auto;">
     </div>
-    <!--This sets the baseUrl to the "scripts" directory, and loads a script that will have a module ID of 'main'-->
-    <!-- <script data-main="js/app.js" src="js/lib/require.js"></script> -->
-    <script src='js/lib/anno4img.js'></script>
-    <script src="js/lib/jquery-3.1.1.js"></script>
-    <script>
+</div>
+<!--This sets the baseUrl to the "scripts" directory, and loads a script that will have a module ID of 'main'-->
+<!-- <script data-main="js/app.js" src="js/lib/require.js"></script> -->
+<script src='js/lib/anno4img.js'></script>
+<script src="js/lib/jquery-3.1.1.js"></script>
+<script>
     var t = anno4img(document.getElementById('anno4img-container'));
     t.loadImg('images/img_1.png');
-    </script>
+</script>
 </body>
 
 </html>
