添加 标签操作组件

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <script src="js/lib/jquery-3.1.1.js"></script>
 <script>
     var t = anno4img(document.getElementById('anno4img-container'));
-    t.loadImg('images/img_1.png');
+    t.loadImg('images/img_4.jpg');
 </script>
 </body>
 
