--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div id="anno4img-container" style="width:800px; height: 600px; border: 1px solid #ccc; margin:0 auto;">
     </div>
 </div>
-<!--This sets the baseUrl to the "scripts" directory, and loads a script that will have a module ID of 'main'-->
+<!--This sets the baseUrl to the "scripts" directory, and loads a scJPA 对象关系映射ript that will have a module ID of 'main'-->
 <!-- <script data-main="js/app.js" src="js/lib/require.js"></script> -->
 <script src='js/lib/anno4img.js'></script>
 <script src="js/lib/jquery-3.1.1.js"></script>
